--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <img src="https://img.freepik.com/vector-premium/icono-perfil-simple-color-blanco-icono_1076610-50204.jpg?semt=ais_hybrid" alt="Victor Quezada" class="profile-img">
+            <img src="images/perfil.png" alt="Victor Quezada" class="profile-img">
             <h1 class="title">Victor Quezada</h1>
             <p class="subtitle">Estudiante de Ingeniería en Sistemas | Digitador de Datos Contables</p>
             <div class="social-links">
