--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <img src="https://www.flaticon.es/icono-gratis/perfil_3106921" alt="Victor Quezada" class="profile-img">
+            <img src="/images/perfil.png" alt="Victor Quezada" class="profile-img">
             <h1 class="title">Victor Quezada</h1>
             <p class="subtitle">Estudiante de Ingeniería en Sistemas | Digitador de Datos Contables</p>
             <div class="social-links">
